fix(askamerica-engine): URL(String) -> URI.create().toURL() (unblock -Werror release)
The engine-v0.33.0 release build failed: askamerica-engine compiles with -Werror and
UsageMetering used the JDK-deprecated new URL(String) at two call sites (quota +
metering endpoints), so the deprecation warning became a compile error on JDK 21.
Switch to java.net.URI.create(...).toURL(). Pre-existing (from 97f8ab190), surfaced
on the first release build since. :askamerica-engine:compileJava clean.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>